--- a/package.json
+++ b/package.json
@@ -3,4 +3,8 @@
     "bootstrap": "^5.1.3",
     "sass": "^1.49.11"
   }
+  ,
+  "scripts":{
+    "start": "sass ./src/sass/main.scss ./src/styles/styles.css --watch"
+  }
 }
